# bmrm

./: .gitignore  CMakeLists.txt  README
data/: data.cpp  data.hpp  data.mk  datafactory.hpp  multilabelvecdata.cpp  multilabelvecdata.hpp  seqdata.cpp  seqdata.hpp  seqfeature.cpp  seqfeature.hpp  seqlabel.cpp  seqlabel.hpp  varlenveclabel.cpp  varlenveclabel.hpp  vecconsdata.hpp  vecconstraints.cpp  vecconstraints.hpp  vecdata.cpp  vecdata.hpp  vecfeature.cpp  vecfeature.hpp  veclabel.cpp  veclabel.hpp
graphmatch-bmrm/: Makefile  README  gm-bmrm-predict.cpp  gm-bmrm-train.cpp  graphdata.cpp  graphdata.hpp  graphmatchloss.cpp  graphmatchloss.hpp
graphmatch-bmrm/asp/: gap.c  gap.h  lap.cpp  lap.hpp
graphmatch-bmrm/configfiles/: graphmatch.bt.conf  graphmatch.l1.conf  graphmatch.l2.conf
linear-bmrm/: CMakeLists.txt  Makefile  README  linear-bmrm-predict.cpp  linear-bmrm-train.cpp
linear-bmrm/configfiles/: binary.bt.conf  binary.l1.conf  binary.l2.conf  multiclass.bt.conf  multiclass.l1.conf  multiclass.l2.conf  multilabel.bt.conf  multilabel.l1.conf  multilabel.l2.conf  ranking.bt.conf  ranking.l1.conf  ranking.l2.conf  univariateregression.bt.conf  univariateregression.l1.conf  univariateregression.l2.conf
linesearch/: hinge_linesearch.cpp  hinge_linesearch.hpp  linesearch.cpp  linesearch.hpp  linesearch.mk  multilabel_linesearch.cpp  multilabel_linesearch.hpp
loss/: CplexSolver.cpp  CplexSolver.hpp  LinearProgramSolver.hpp  binaryclassificationloss.cpp  binaryclassificationloss.hpp  epsiloninsensitiveloss.cpp  epsiloninsensitiveloss.hpp  exponentialloss.cpp  exponentialloss.hpp  fbetaloss.cpp  fbetaloss.hpp  hingeloss.cpp  hingeloss.hpp  huberhingeloss.cpp  huberhingeloss.hpp  huberrobustloss.cpp  huberrobustloss.hpp  lap.cpp  lap.hpp  leastabsdevloss.cpp  leastabsdevloss.hpp  leastsquaresloss.cpp  leastsquaresloss.hpp  linesearch_hingeloss.cpp  linesearch_hingeloss.hpp  linesearch_multilabelloss.cpp  linesearch_multilabelloss.hpp  linesearchloss.mk  linesearchlossfactory.hpp  logisticloss.cpp  logisticloss.hpp  loss.cpp  loss.hpp  loss.mk  lossfactory.hpp  multilabelloss.cpp  multilabelloss.hpp  ndcgrankloss.cpp  ndcgrankloss.hpp  noveltyloss.cpp  (+21 more)
loss/cost/: cost.hpp  costfactory.hpp  hammingcost.cpp  hammingcost.hpp  zerocost.hpp
ls-bmrm/: Makefile  README  ls-bmrm-predict.cpp  ls-bmrm-train.cpp
ls-bmrm/configfiles/: ls-bmrm.hinge.conf  ls-bmrm.multilabel.conf
model/: model.cpp  model.hpp  model.mk  modelfactory.hpp
regularizer/: l1n1.cpp  l1n1.hpp  l2n2.cpp  l2n2.hpp  regularizer.cpp  regularizer.hpp  regularizer.mk  regularizerfactory.hpp
smmmc-bmrm/: Makefile  seqmulticlassdata.cpp  seqmulticlassdata.hpp  seqmulticlassfeature.cpp  seqmulticlassfeature.hpp  seqmulticlasslabel.cpp  seqmulticlasslabel.hpp  smmmc-bmrm-predict.cpp  smmmc-bmrm-train.cpp  smmmulticlassloss.cpp  smmmulticlassloss.hpp
smmmc-bmrm/configfiles/: smmmc.bt.conf  smmmc.l1.conf  smmmc.l2.conf
solver/: bmrm.cpp  bmrm.hpp  bt.cpp  bt.hpp  solver.hpp  solver.mk  solverfactory.hpp
solver/bmrminnersolver/: bmrminnersolver.cpp  bmrminnersolver.hpp  bmrminnersolverfactory.hpp  l1n1_clp.cpp  l1n1_clp.hpp  l2n2_bmrmdualinnersolver.cpp  l2n2_bmrmdualinnersolver.hpp  l2n2_cplex.cpp  l2n2_cplex.hpp  l2n2_daifletcherpgm.cpp  l2n2_daifletcherpgm.hpp  l2n2_linesearch.cpp  l2n2_linesearch.hpp  l2n2_prloqo.cpp  l2n2_prloqo.hpp
test/: constraints.txt  features.txt  labels.txt  run.sh  test.conf
tools/: split_label_data.py
utilities/: bmrmexception.cpp  bmrmexception.hpp  common.cpp  common.hpp  configuration.cpp  configuration.hpp  sml.cpp  sml.hpp  timer.cpp  timer.hpp  utilities.mk
